refactor(project): add loggers and uniform all sinks